force-app/main/default/objects/LeaveDay__c/LeaveDay__c.object-meta.xml
<CustomObject>
    <label>Leave Day</label>
    <nameField>
        <displayFormat>LD-{000000}</displayFormat>
        <label>Leave Day ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>