force-app/main/default/objects/LeaveDay__c/fields/BusinessDay__c.field-meta.xml
<CustomField>
    <fullName>BusinessDay__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BusinessDay</label>
    <type>Checkbox</type>
</CustomField>