force-app/main/default/objects/LeaveDay__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_450, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_450)) + CASESAFEID( LeaveRequest__r.Employee__c )
,  LeaveRequest__r.Employee__r.Name 
,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee</label>
    <type>Text</type>
</CustomField>