force-app/main/default/objects/LeaveDay__c/fields/LeaveDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveDate__c</fullName>
    <label>Leave Date</label>
    <type>Date</type>
</CustomField>