force-app/main/default/objects/LeaveDay__c/fields/LeaveRequest__c.field-meta.xml
<CustomField>
    <fullName>LeaveRequest__c</fullName>
    <label>Leave Request</label>
    <referenceTo>Leaverequest__c</referenceTo>
    <relationshipLabel>Leave Days</relationshipLabel>
    <relationshipName>Work_Cycle_Requests</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>