force-app/main/default/objects/LeaveDay__c/fields/Paid_Type__c.field-meta.xml
<CustomField>
    <fullName>Paid_Type__c</fullName>
    <label>Paid Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Leave</fullName>
            </value>
            <value>
                <fullName>Unpaid Leave</fullName>
            </value>
            <value>
                <fullName>Privilege Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>