force-app/main/default/objects/LeaveDay__c/fields/ThisCycle__c.field-meta.xml
<CustomField>
    <fullName>ThisCycle__c</fullName>
    <formula>If (Month( LeaveDate__c ) = 1, &quot;January&quot;,
If (Month( LeaveDate__c ) = 2, &quot;February&quot;,
If (Month( LeaveDate__c ) = 3, &quot;March&quot;,
If (Month( LeaveDate__c ) = 4, &quot;April&quot;,
If (Month( LeaveDate__c ) = 5, &quot;May&quot;,
If (Month( LeaveDate__c ) = 6, &quot;June&quot;,
If (Month( LeaveDate__c ) = 7, &quot;July&quot;,
If (Month( LeaveDate__c ) = 8, &quot;August&quot;,
If (Month( LeaveDate__c ) = 9, &quot;September&quot;,
If (Month( LeaveDate__c ) = 10, &quot;October&quot;,
If (Month( LeaveDate__c ) = 11, &quot;November&quot;,
&quot;December&quot;)))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Cycle</label>
    <type>Text</type>
</CustomField>