force-app/main/default/objects/LeaveDay__c/fields/Unique_combination__c.field-meta.xml
<CustomField>
    <fullName>Unique_combination__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>BAONK: This field is to prevent create duplicate Leave day of same employee</description>
    <label>Unique_combination</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>