force-app/main/default/objects/LeaveDay__c/fields/WorkCycle__c.field-meta.xml
<CustomField>
    <fullName>WorkCycle__c</fullName>
    <label>Work Cycle</label>
    <referenceTo>WorkCycle__c</referenceTo>
    <relationshipLabel>Leave Days</relationshipLabel>
    <relationshipName>Work_Cycle_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>