force-app/main/default/objects/LeaveDay__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LeaveRequest__c</columns>
    <columns>Employee__c</columns>
    <columns>LeaveDate__c</columns>
    <columns>Paid_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>